tests/ui/pattern/usefulness/top-level-alternation.stderr
error: unreachable pattern
  --> $DIR/top-level-alternation.rs:4:23
   |
LL |     while let 0..=2 | 1 = 0 {}
   |               -----   ^ no value can reach this
   |               |
   |               matches all the relevant values
   |
note: the lint level is defined here
  --> $DIR/top-level-alternation.rs:1:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: unreachable pattern
  --> $DIR/top-level-alternation.rs:5:20
   |
LL |     if let 0..=2 | 1 = 0 {}
   |            -----   ^ no value can reach this
   |            |
   |            matches all the relevant values

error: unreachable pattern
  --> $DIR/top-level-alternation.rs:9:15
   |
LL |         0
   |         - matches all the relevant values
LL |             | 0 => {}
   |               ^ no value can reach this

error: unreachable pattern
  --> $DIR/top-level-alternation.rs:14:15
   |
LL |         Some(0)
   |         ------- matches all the relevant values
LL |             | Some(0) => {}
   |               ^^^^^^^ no value can reach this

error: unreachable pattern
  --> $DIR/top-level-alternation.rs:19:9
   |
LL |         (0, _) | (_, 0) => {}
   |         --------------- matches all the relevant values
LL |         (0, 0) => {}
   |         ^^^^^^ no value can reach this

error: unreachable pattern
  --> $DIR/top-level-alternation.rs:39:9
   |
LL |         None | Some(_) => {}
   |         -------------- matches all the relevant values
LL |         _ => {}
   |         ^ no value can reach this

error: unreachable pattern
  --> $DIR/top-level-alternation.rs:43:9
   |
LL |         None | Some(_) => {}
   |         -------------- matches all the relevant values
LL |         Some(_) => {}
   |         ^^^^^^^ no value can reach this

error: unreachable pattern
  --> $DIR/top-level-alternation.rs:44:9
   |
LL |         None | Some(_) => {}
   |         -------------- matches all the relevant values
LL |         Some(_) => {}
LL |         None => {}
   |         ^^^^ no value can reach this

error: unreachable pattern
  --> $DIR/top-level-alternation.rs:49:9
   |
LL |         None | Some(_) => {}
   |         ^^^^^^^^^^^^^^ no value can reach this
   |
note: multiple earlier patterns match some of the same values
  --> $DIR/top-level-alternation.rs:49:9
   |
LL |         Some(_) => {}
   |         ------- matches some of the same values
LL |         None => {}
   |         ---- matches some of the same values
LL |         None | Some(_) => {}
   |         ^^^^^^^^^^^^^^ collectively making this unreachable

error: unreachable pattern
  --> $DIR/top-level-alternation.rs:53:9
   |
LL |         1 | 2 => {},
   |         ----- matches all the relevant values
LL |         1..=2 => {},
   |         ^^^^^ no value can reach this

error: unreachable pattern
  --> $DIR/top-level-alternation.rs:56:14
   |
LL |     let (0 | 0) = 0 else { return };
   |          -   ^ no value can reach this
   |          |
   |          matches all the relevant values

error: aborting due to 11 previous errors

